# safeshell

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  safeshell.tape
.github/ISSUE_TEMPLATE/: bug_report..yml
.github/workflows/: publish.yml  release.yml
example/: README.md
example/docker/: Dockerfile  README.md
install/: install.ps1  install.sh
safeshell/: Cargo.toml
safeshell/src/: config.rs  engine.rs  state.rs
safeshell/tests/: sensitive-patterns_test.rs
safeshell/tests/suites_sensitive_patterns/: aws_cred.yaml  aws_end_access_key.yaml  aws_env_secret_key.yaml  cargo_registry_token.yaml  cloudflare_env_api_key.yaml  diskutil_password.yaml  github_app_token.yaml  github_env_token.yaml  github_oauth_token.yaml  github_personal_token.yaml  github_refresh_token.yaml  gitlab_personal_token.yaml  gitlab_token.yaml  hashicorp_env_vault_token.yaml  heroku_env_api_key.yaml  mail_gun_api_key.yaml  newrelic_env_api_key.yaml  nuget_api_key.yaml  readme_api_key.yaml  sendgrid_api_key.yaml  sendgrid_api_token.yaml  slack_webhook.yaml  twitter_clientid.yaml  twitter_secret_key.yaml  vercel_env_token.yaml
scripts/: release-version.sh
xtask/: Cargo.toml
xtask/src/: main.rs
